addons/monitoring/prometheus-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring-prometheus-server
  namespace: kubernetes-monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: monitoring-prometheus
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        backend:
          serviceName: monitoring-prometheus-server
          servicePort: 80
